--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.3",
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
